# ssh-build-server

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
config/: Default.toml
dir/: test.txt
examples/hello_world/: README.md  hello_world.toml
scripts/linux/: build.sh
scripts/windows/: build.ps1
src/: main.rs
src/util/: mod.rs  settings.rs  ssh.rs
wix/: main.wxs
